# code_py_book_serious_python

./: .gitignore  Pipfile  README.md  pyproject.toml
chap2_mod_lib_and_framework/: notes.md  play_atexit.py
chap2_mod_lib_and_framework/play_sphinx/source/: conf.py  index.rst
part01_useful_stdlib_and_doc_practices/: play_argparse.py
part01_useful_stdlib_and_doc_practices/messy/python-decouple/: requirements.txt
part02_timezone/: README.md  datetime_and_dateutil.py
part03_software_distribution/: AUTHORS  ChangeLog  README.md  setup.cfg  setup.py
part03_software_distribution/foobar.egg-info/: PKG-INFO  pbr.json
part04_unit_testing/: README.md  pytest.ini
part04_unit_testing/mylib/: foobar.py
part04_unit_testing/mylib/tests/: test_foobar.py  test_skip.py
