[metadata]
name = foobar
author = John Doe
author-email = lol@example.org
license = MIT
long_description = file: README.rst
url = "https://pypi.org/project/foobar/"
requires-python = >=2.6
classifiers =
Development Status :: 4 ­ Beta
Environment :: Console
Intended Audience :: Developers
Programming Language :: Python
